--- a/KenCore.Web/appsettings.json
+++ b/KenCore.Web/appsettings.json
@@ -5,7 +5,7 @@
   "ConnectionStrings": {
     "Redis": "192.168.10.222:6379",
     "KenData": "mongodb://root:_sys31UC@192.168.10.222:27017",
-    "DefaultConnection": "Data Source=192.168.13.74;Database=KenDB;User ID=root;Password=binbin407;pooling=true;CharSet=utf8;port=3306"
+    "DefaultConnection": "Data Source=127.0.0.1;Database=KenDB;User ID=root;Password=root;pooling=true;CharSet=utf8;port=3306"
   },
   "Logging": {
     "LogLevel": {
